# DietAI

./: .env.dev  .env.example  .gitignore  .sync-snapshot.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  langgraph.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  token.json  vector_init.py  交付文档.md  开发计划.md  桌宠功能计划书-APP端.md  桌宠架构设计书-APP端.md
Diet需求文档/: 架构设计文档.md
agent/: agent.py  chat_agent.py  test_agent.py
agent/UserMemory/: .gitkeep
agent/common_utils/: configuration.py  image_utils.py  model_utils.py  rag_utils.py  redis_util.py  solar_term_utils.py
agent/diet_deep_agent/: __init__.py  config.py  deep_agent.py  prompts.py
agent/enhanced_nutrition/: __init__.py  enhanced_agent.py  enhanced_nodes.py  states.py
agent/goal_tracking/: __init__.py  goal_agent.py  nodes.py  states.py
agent/memory/: __init__.py  markdown_renderer.py  memory_manager.py  schemas.py  sync_service.py
agent/nutrition_agent/: agent.py
agent/utils/: chat_nodes.py  chat_states.py  configuration.py  nodes.py  prompts.py  states.py  structs.py  (+2 more)
alembic/: env.py
api/: exercise.py  notification.py  reminder.py  water.py  wellness.py
docs/: Agent报错  DEPLOYMENT.md  MILESTONE1_SUMMARY.md
frontend_flutter/: AUTHENTICATION_GUIDE.md  DEPLOYMENT_GUIDE.md  FLUTTER_DEPLOYMENT_GUIDE.md  FOOD_API_INTEGRATION_GUIDE.md  FOOD_IMAGE_PREVIEW_GUIDE.md  README.md  pubspec.yaml
routers/: __init__.py  analysis_chat_router.py  auth_router.py  chat_router.py  deep_router.py  exercise_router.py  food_router.py  goal_router.py  health_router.py  notification_router.py  reminder_router.py  saved_meals_router.py  user_router.py  water_router.py  wellness_router.py
scripts/: encrypt_existing_data.py  ingest_rag_data.py  init_wellness_data.py  setup_gradle.sh
shared/: __init__.py
tests/: frontend_check.py  smoke_test.py
(+279 files in other folders)
